# reading-nook

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  manage.py  pyproject.toml  tox.ini
app/: __init__.py  config.py  database.py  models.py
