[tool.poetry]
name = "reading-nook"
version = "0.1.0"
description = "A full service self-hostable read-it-later service"
authors = ["James Montgomery <james.montgomery@gmail.com>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
tox = "^3"
tox-poetry = "^0.5.0"
flake8 = "^7.1.1"
flask-restx = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
